# gce

./: CHANGELOG.md  Jenkinsfile  LICENSE  README.md  pyproject.toml
ci/docker/linux/jenkins/: Dockerfile  apt-packages.txt
ci/docker/windows/: Dockerfile
ci/jenkins/scripts/: ensure_application_installed_property.ps1  ensure_application_uninstalled.ps1
scripts/: create-windows-distribution.ps1  create_mac_distrib.sh
scripts/create_standalone/: CPackConfig.cmake.jinja2  bootstrap_standalone.py  create_standalone.py  package_spec.py.jinja2
src/gce/: __main__.py  actions.py  editors.py  gui.py  main.py  models.py
tests/: example.xml  test_actions.py  test_editors.py  test_gui.py  test_models.py
