[project]
name = "gce"
version = "0.0.1"
description = "Galatea config editor"
requires-python = ">= 3.12"
maintainers = [
    { name="Henry Borchers", email="hborcher@illinois.edu" }
]
authors = [
    {name="University Library at The University of Illinois at Urbana Champaign: Preservation Services", email="prescons@library.illinois.edu"}
]
license = "NCSA"
license-files = ["LICENSE"]
readme = { file= "README.md", content-type="text/markdown" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Natural Language :: English",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Archiving"

]
dependencies = [
    "pyside6-essentials>=6.9.2",
]

[tool.setuptools]
packages = ["gce"]
zip-safe = true
package-dir = {"" = "src"}
